fix[overflow menu icon]: overflow menu icon on color usage tab too sm… (#1863)
* fix[overflow menu icon]: overflow menu icon on color usage tab too small #1861

* style(color-table): move overflow menu up 8px

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -76,6 +76,7 @@
 
 .color-token-value .bx--overflow-menu {
   margin-left: $spacing-03;
+  margin-top: -$spacing-03;
 }
 
 .color-token-value .bx--overflow-menu-options {
@@ -84,8 +85,8 @@
 }
 
 .color-token-value .bx--overflow-menu__icon {
-  width: rem(12px);
-  height: rem(12px);
+  width: rem(16px);
+  height: rem(16px);
 }
 
 .color-token-value > div {
